syntax = "proto3";
package pqxdh;

import "crypto/curve/keys.proto";
import "pqxdh/pb_signed_curve_prekey.proto";
import "pqxdh/pb_signed_pqkem_prekey.proto";
import "pqxdh/pb_one_time_curve_prekey_set.proto";
import "pqxdh/pb_signed_one_time_pqkem_prekey_set.proto";

message PBRegistrationBundle {
    crypto.curve.PBEllipticCurvePublicKey identity_key = 1;
    pqxdh.PBSignedCurvePrekey signed_curve_prekey = 2;
    pqxdh.PBSignedPQKEMPrekey signed_last_resort_pqkem_prekey = 3;
    pqxdh.PBOneTimeCurvePrekeySet one_time_curve_prekey_set = 4;
    pqxdh.PBSignedOneTimePQKEMPrekeySet signed_one_time_pqkem_prekey_set = 5;
}